--- a/app/src/main/res/layout-land/activity_sales_condition_page.xml
+++ b/app/src/main/res/layout-land/activity_sales_condition_page.xml
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/btn_User_info_page1"
+        android:id="@+id/btn_User_info_page"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="#FFFFFF"
@@ -41,7 +41,7 @@
         app:srcCompat="@drawable/user" />
 
     <TextView
-        android:id="@+id/diaryTextView"
+        android:id="@+id/TextView"
         android:layout_width="100dp"
         android:layout_height="37dp"
         android:layout_marginStart="4dp"
@@ -104,7 +104,7 @@
         app:srcCompat="@drawable/kobb" />
 
     <Button
-        android:id="@+id/Btn"
+        android:id="@+id/btn_Sales_condition_search"
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button_style"
@@ -139,7 +139,7 @@
         tools:layout_editor_absoluteY="560dp" />
 
     <Button
-        android:id="@+id/btn_Start_kiosk_page"
+        android:id="@+id/Choice_mode_page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -149,9 +149,9 @@
         android:textColor="#F8F0F0"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_User_info_page1"
-        app:layout_constraintEnd_toStartOf="@+id/btn_User_info_page1"
-        app:layout_constraintTop_toTopOf="@+id/btn_User_info_page1" />
+        app:layout_constraintBottom_toBottomOf="@+id/btn_User_info_page"
+        app:layout_constraintEnd_toStartOf="@+id/btn_User_info_page"
+        app:layout_constraintTop_toTopOf="@+id/btn_User_info_page" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline9"
