--- a/app/src/main/res/layout/activity_join_page.xml
+++ b/app/src/main/res/layout/activity_join_page.xml
@@ -213,7 +213,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <ImageButton
-            android:id="@+id/btn_User_info_page1"
+            android:id="@+id/btn_User_info_page"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
